scripts/k8s/todosomething-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todosomething-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: todosomething.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todosomething-service
                port:
                  number: 8080
